[package]
name = "nile-rs"
version = "0.1.0"
edition = "2021"
include = ["/base"]

[lib]
name = "nile_rs"
path = "src/nile-rs/lib.rs"
doc = false

[[bin]]
name = "nile-rs"
doc = false

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
dotenv = "0.15.0"
figment = { version = "0.10", features = ["toml", "env", "test"] }
cairo-lang-compiler = "1.0.0-alpha.3"
cairo-lang-starknet = "1.0.0-alpha.3"
serde = "1.0.152"
serde_json = "1.0.93"
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs", commit = "00a1a74a" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", commit = "00a1a74a" }
starknet-signers = { git = "https://github.com/xJonathanLEI/starknet-rs", commit = "00a1a74a" }
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0.8"
assert_fs = "1.0.10"
nile-test-utils = { path = "crates/nile-test-utils"}
snapbox = "0.4.6"
