[package]
name = "nile-rs"
version = "0.1.0"
edition = "2021"
include = ["/base"]

[lib]
name = "nile_rs"
path = "src/nile-rs/lib.rs"
doc = false

[[bin]]
name = "nile-rs"
doc = false

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
clap = { version = "4.1.4", features = ["derive"] }
dotenv = "0.15.0"
figment = { version = "0.10", features = ["toml", "env", "test"] }
cairo-lang-compiler = "1.0.0-alpha.3"
cairo-lang-starknet = "1.0.0-alpha.3"
serde = "1.0.152"
serde_json = "1.0.93"
starknet-accounts = { git = "https://github.com/xJonathanLEI/starknet-rs"}
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs"}
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs"}
starknet-providers = { git = "https://github.com/xJonathanLEI/starknet-rs"}
starknet-signers = { git = "https://github.com/xJonathanLEI/starknet-rs"}
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
walkdir = "2.3.2"
reqwest = "0.11.14"

[dev-dependencies]
assert_cmd = "2.0.8"
assert_fs = "1.0.10"
nile-test-utils = { path = "crates/nile-test-utils"}
snapbox = "0.4.6"
httpmock = "0.6.7"
